@@ -9,7 +9,11 @@ SubVersion: $Id$
 		like specified by TI but the int hanlder proves it's false).
 		TiEmu does not run an infinite loop when transfer is interrupted.
 	- [roms] $1593: previous bug fixed again for _all_ calcs
-	- [roms] $1594: set link timeout to 60s for non-NT platforms, 1.5s for others
+	- [roms] $1597: set link timeout to 60s for non-NT platforms, 1.5s for others
+	- [roms] $1598: added a new function in the ticables library API (ticable_link_reset)
+		for use by TiEmu. It allows to reset/flush the pipes of virtual linking when the
+		DBus is reset (usually due to transmission error). Link is now resumable.
+	//- [roms] $1599: reimplemented HW3 RTC from latest/new O. Armand's information.
 
 - 25/06/2005, version 2.00-rc6:
 	- [roms] $1552: replaced my hand-made about box by the generic one provided with GTK 2.6
